Used Bootstrap collapse structure for better UI and fixed the auto-height adjustment for the two sections.

--- a/public/style.css
+++ b/public/style.css
@@ -43,3 +43,6 @@ body {
   width:18px;
   height:18px;
 }
+.entry-bar{
+  height:50px;
+}
